# interop_pkg

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  chaptico_mock_comp.yaml  chaptico_square.yaml  chaptico_test_fixture.yaml  elberta_test_fixture.yaml  notes.txt  package.xml
launch/: client.launch  full.launch  server.launch
param/: client_params.yaml  params.sh
scripts/: ClientObjects.py  InteropClient.py  client.py  interop_client.py  params.sh  spawn_client.py  spawn_server.py
scripts/test/: interop_client_test.py
src/: client.py
