<?xml version="1.0"?>
<package>
  <name>interop_pkg</name>
  <version>0.0.0</version>
  <description>The interop_pkg package</description>
  <maintainer email="michael@todo.todo">michael</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosflight_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sniper_cam</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosflight_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sniper_cam</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
