<package format="2">
  <name>interop_pkg</name>
  <version>0.0.1</version>
  <description>The interop_pkg package</description>
  <maintainer email="michael@todo.todo">michael</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>rosplane_msgs</depend>
  <depend>std_msgs</depend>
  <depend>uav_msgs</depend>

</package>
